<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aplicatie Android</string>
    <string name="app_launcher_name">Aplicatia lui Narcis</string>
    <string name="change_view">Change view</string>
    <string name="daily_view">Daily view</string>
    <string name="monthly_view">Monthly view</string>
    <string name="simple_event_list">Simple event list</string>

    <!-- Event -->
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event">New Event</string>
    <string name="create_new_event">Create a new event</string>
    <string name="end_before_start">The event cannot end earlier than it starts</string>
    <string name="event_added">Event added successfully</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="override_event_types">Override event types in the file</string>

    <!-- Event details -->
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="all_day">All-day</string>
    <string name="save">Save</string>
    <string name="write_note">write note</string>
    <string name="no_note">no note</string>
    <string name="add_location">Add Location</string>
    <string name="no_events_for_this_day">No events for this day!</string>

    <!-- Fab menu -->
    <string name="note">Note</string>
    <string name="audio">Audio</string>
    <string name="draw">Draw</string>


    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="record_audio">Record Audio</string>
    <string name="change_color">Change color</string>
    <string name="pen_size">Pen size:</string>
    <string name="todo">TODO</string>
    <string name="enter_text">Enter text</string>

    <!-- List items -->
    <string name="icon">Icon</string>
    <string name="some_long_text_to_see">Some long text to see</string>
    <string name="image">image</string>
    <string name="audiourl">AudioURL</string>


    <!-- Register / Login User -->
    <string name="register">Register</string>
    <string name="type_a_full_name">Type a full name</string>
    <string name="register_user">Register user</string>
    <string name="type_a_password">Type a password</string>
    <string name="type_an_email">Type an email</string>
    <string name="logout">Logout</string>

</resources>
