<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        android:maxLength="80"
        android:maxLines="1"
        android:minEms="20"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/day_text_size"
        android:autofillHints=""
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_title"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/location"
        android:inputType="textCapWords"
        android:maxLength="80"
        android:maxLines="1"
        android:minEms="20"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/day_text_size"
        android:autofillHints="" />

    <EditText
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_location"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:autoLink="all"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:linksClickable="true"
        android:minEms="20"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/day_text_size"
        android:autofillHints="" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="22dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/primary_color" />
</RelativeLayout>
