<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterUserActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:autoLink="all"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/type_a_full_name"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:linksClickable="true"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:autoLink="all"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/type_an_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:linksClickable="true"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:autoLink="all"
            android:autofillHints=""
            android:gravity="top"
            android:hint="@string/type_a_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minEms="20"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/day_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/register_user"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/primary_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>