<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DrawActivity">

    <com.narcis.neamtiu.licentanarcis.util.PaintFileHelper
        android:id="@+id/paintView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_margin"
        app:layout_constraintBottom_toTopOf="@+id/buttonsGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/change_color"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/primary_color" />

        <LinearLayout
            android:id="@+id/buttonsGroup1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/redo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/redo"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/primary_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/undo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/undo"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/primary_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsGroup1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/primary_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/primary_color" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>