<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fabLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/primary_color"
        fab:menu_colorPressed="@color/primary_dark_color"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        android:layout_alignParentEnd="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_note"
            fab:fab_size="mini"
            fab:fab_label="@string/event"
            fab:fab_colorNormal="@color/primary_color"
            fab:fab_colorPressed="@color/primary_dark_color"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_note"
            fab:fab_size="mini"
            fab:fab_label="@string/note"
            fab:fab_colorNormal="@color/primary_color"
            fab:fab_colorPressed="@color/primary_dark_color"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_record"
            fab:fab_size="mini"
            fab:fab_label="@string/audio"
            fab:fab_colorNormal="@color/primary_color"
            fab:fab_colorPressed="@color/primary_dark_color"
            fab:fab_colorRipple="#99FFFFFF"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_draw"
            fab:fab_size="mini"
            fab:fab_label="@string/draw"
            fab:fab_colorNormal="@color/primary_color"
            fab:fab_colorPressed="@color/primary_dark_color"
            fab:fab_colorRipple="#99FFFFFF"/>
    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
